# centerim5

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  _clang-format  aclocal.m4  autogen.sh  bootstrap  bootstrap_cmake  centerim5.1  centerimConfig.cmake  config.h.cmake  config.h.in  config.in.h  configure  configure.ac  gettext.h
cmake/: CMakeConfs.cmake  Endianess.cmake  FindCursesw.cmake  FindIconv.cmake  FindNCURSESW.cmake  FindSigc.cmake
contrib/: Makefile.am  extnotify.py
cppconsui/: AbstractDialog.cpp  AbstractDialog.h  AbstractLine.cpp  AbstractLine.h  AbstractListBox.cpp  AbstractListBox.h  Adjustment.cpp  Adjustment.h  Application.cpp  Application.h  Border.cpp  Border.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ColorPicker.cpp  ColorPicker.h  ColorPickerComboBox.cpp  ColorPickerComboBox.h  ColorPickerDialog.cpp  ColorPickerDialog.h  ColorPickerPalette.cpp  ColorPickerPalette.h  ColorScheme.cpp  ColorScheme.h  ComboBox.cpp  ComboBox.h  ConsUICurses.cpp  ConsUICurses.h  ConsuiCurses.cpp  ConsuiCurses.h  ConsuiLog.h  Container.cpp  Container.h  CoreManager.cpp  CoreManager.h  CppConsUI.cpp  CppConsUI.h  (+98 more)
cppconsui/libtermkey/: CMakeLists.txt  driver-csi.c  driver-ti.c  termkey.c  termkey.h
doc/: CMakeLists.txt  Makefile.am  doxygen-cim5.conf  doxygen-cim5.conf.in  doxygen-cppconsui.conf  doxygen-cppconsui.conf.in  style.css
intl/: Makefile
libtermkey/: CMakeLists.txt  Makefile.am  driver-ti.c  termkey.h
m4/: Makefile.am  curses.m4
misc/: Makefile.am  git-version-gen
plugins/: CMakeLists.txt  Makefile.am  extaction.c
po/: CMakeLists.txt  ChangeLog  LINGUAS  Makevars  POTFILES.in  centerim.pot  centerim5.pot  cs.po  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  nl.po  ru.po  sv.po
src/: AccountStatusMenu.cpp  AccountStatusMenu.h  AccountWindow.cpp  AccountWindow.h  Accounts.cpp  Accounts.h  AccountsWindow.cpp  AccountsWindow.h  BuddyList.cpp  BuddyList.h  BuddyListNode.cpp  BuddyListNode.h  CIMWindowManager.cpp  CIMWindowManager.h  CMakeLists.txt  CenterIM.cpp  CenterIM.h  CenterMain.cpp  CenterMain.h  Conf.cpp  Conf.h  Connections.cpp  Connections.h  Conversation.cpp  Conversation.h  ConversationRoomList.cpp  ConversationRoomList.h  Conversations.cpp  Conversations.h  Defines.h  Footer.cpp  Footer.h  GeneralMenu.cpp  GeneralMenu.h  Header.cpp  Header.h  Log.cpp  Log.h  Makefile.am  Makefile.in  (+16 more)
tests/: CMakeLists.txt  MainLoop.cpp  MainLoop.h  Makefile.am  button.cpp  button_test.cpp  colorpicker.cpp  keybinding_config.cpp  label.cpp  label_test.cpp  linestyle_test.cpp  main.cpp  scrollpane.cpp  scrollpane_test.cpp  submenu.cpp  submenu_test.cpp  termex.py  termex.src  textbuffer_test.cpp  textentry.cpp  textentry_test.cpp  textline_test.cpp  textview.cpp  textview_test.cpp  treeview.cpp  treeview.test  treeview_test.cpp  window.cpp  window_test.cpp
tests/termex/: termex.py  termex.src
