lib_LTLIBRARIES = libcppconsui.la

# When you add files here, also add them in po/POTFILES.in
libcppconsui_la_SOURCES =\
	Adjustment.cpp \
	Adjustment.h \
	Curses.h \
	Container.cpp \
	Container.h \
	ColorScheme.h \
	ColorScheme.cpp \
	ComboBox.cpp \
	ComboBox.h \
	AbstractListBox.cpp \
	AbstractListBox.h \
	ListBox.cpp \
	ListBox.h \
	HorizontalListBox.cpp \
	HorizontalListBox.h \
	TextBrowser.cpp \
	TextBrowser.h \
	TextInput.cpp \
	TextInput.h \
	TextWindow.cpp \
	TextWindow.h \
	TextEntry.cpp \
	TextEntry.h \
	Widget.cpp \
	Widget.h \
	Window.cpp \
	Window.h \
	WindowManager.cpp \
	WindowManager.h \
	Border.cpp \
	Border.h \
	LineStyle.cpp \
	LineStyle.h \
	HorizontalLine.cpp \
	HorizontalLine.h \
	VerticalLine.cpp \
	VerticalLine.h \
	Panel.cpp \
	Panel.h \
	MenuWindow.cpp \
	MenuWindow.h \
	ScrollPane.cpp \
	ScrollPane.h \
	Scrollable.h \
	Keys.cpp \
	Keys.h \
	TreeView.cpp \
	TreeView.h \
	tree.hh \
	Label.cpp \
	Label.h \
	Button.cpp \
	Button.h \
	Dialog.cpp \
	Dialog.h \
	MessageDialog.cpp \
	MessageDialog.h \
	InputDialog.cpp \
	InputDialog.h \
	InputProcessor.cpp \
	InputProcessor.h \
	CppConsUI.cpp \
	CppConsUI.h \
	TextRBTree.cpp \
	TextRBTree.h \
	TextBuffer.cpp \
	TextBuffer.h \
	TextLineRBTree.cpp \
	TextLineRBTree.h \
	TextLine.cpp \
	TextLine.h \
	TextView.cpp \
	TextView.h


libcppconsui_la_CPPFLAGS = $(CFLAGS) $(GLIBMM_CFLAGS) $(CURSES_INCLUDEDIR) $(DEBUG_CFLAGS)
libcppconsui_la_LIBADD = $(GLIBMM_LIBS) $(CURSES_LIBS)
